--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "express": "^4.19.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
