--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,10 @@
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
     "express": "^4.19.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sqlite3": "^5.1.7"
   }
 }
